# pgip

./: .editorconfig  .gitignore  .gitpod.yml  .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  _config.yml  _toc.yml  about.html  contents.html  describing_variation.md  environment-dev.yml  environment-run.yml  environment-site.yml  environment.yaml  environment.yml  index.html  info.html  listings.json  precourse.html  program.html  pyproject.toml  references.html  requirements-dev.txt  requirements-dev.yml  requirements.txt  robots.txt  schedule.html  search.json  sitemap.xml  syllabus.html  variantfiltering.md
docs/: _course_dates.yml  _course_info.yml  _data.yml  _environment.required  _quarto.yml  _variables.yml  _website.yml  about.qmd  contents.qmd  index.qmd  info.qmd  nbis.scss  precourse.qmd  prepare.py  program.qmd  references.qmd  schedule.csv  schedule.qmd  schedule.tsv  syllabus.qmd
exercises/: E110-popgen_primer.html  E120-variant_calling.html  E130-variant_filtering.html  E140-genotype_likelihoods.html  E210-genetic_diversity.html  E220-ld_and_phasing.html  E230-fst_divergence.html  E240-ld_pruning_pca.html  E250-admixture.html  E310-fstatistics.html  E330-msmc.html  E410-direct_selection.html  E430-linked_selection.html  admixture.html  data.html  demographic_inference.html  describing_variation.html  fstatistics.html  genetic_diversity.html  genotype_likelihoods.html  index.html  ld_pruning_pca.html  preparation.html  selection.html  variantcalling.html  variantfiltering.html  wrightfisher.html
(+308 files in other folders)
