[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pgip/_version.py"

[project]
name = "pgip"
description = "Population genomics in practice - exercise package"
readme = "README.md"
# url = "https://nbissweden.github.io/pgip"
keywords = ["bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'importlib-metadata; python_version>="3.7"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pgip.__version__"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
